--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
-    "next": "15.0.1",
+    "next": "^15.0.1",
     "nodemailer": "^6.9.16",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "tailwindcss-animated": "^1.1.2"
   },
